- large refactory produced by moving to java 16 - remove lombok - draft revision of hough transform for lines