@@ -34,6 +34,7 @@ import rapaio.ml.classifier.linear.BinaryLogistic;
 import rapaio.ml.common.Capabilities;
 import rapaio.printer.Printable;
 
+import java.io.Serial;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -49,6 +50,7 @@ import static java.util.stream.Collectors.toList;
  */
 public class CBinaryLogisticStacking extends AbstractClassifierModel<CBinaryLogisticStacking, ClassifierResult> implements Printable {
 
+    @Serial
     private static final long serialVersionUID = -9087871586729573030L;
 
     private static final Logger logger = Logger.getLogger(CBinaryLogisticStacking.class.getName());
@@ -91,14 +93,10 @@ public class CBinaryLogisticStacking extends AbstractClassifierModel<CBinaryLogi
 
     @Override
     public Capabilities capabilities() {
-        return Capabilities.builder()
-                .allowMissingTargetValues(false)
-                .allowMissingInputValues(false)
-                .inputTypes(Arrays.asList(VarType.BINARY, VarType.INT, VarType.DOUBLE))
-                .targetType(VarType.NOMINAL)
-                .minInputCount(1).maxInputCount(100_000)
-                .minTargetCount(1).maxTargetCount(1)
-                .build();
+        return new Capabilities(
+                1, 100_000,
+                Arrays.asList(VarType.BINARY, VarType.INT, VarType.DOUBLE), false,
+                1, 1, List.of(VarType.NOMINAL), false);
     }
 
     @Override
