@@ -35,7 +35,9 @@ import rapaio.ml.regression.RegressionResult;
 import rapaio.printer.Printer;
 import rapaio.printer.opt.POption;
 
+import java.io.Serial;
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * Created by <a href="mailto:padreati@yahoo.com">Aurelian Tutuianu</a> on 4/16/19.
@@ -43,6 +45,7 @@ import java.util.Arrays;
 public class NestedBoostingRTree extends AbstractRegressionModel<NestedBoostingRTree, RegressionResult>
         implements GBTRtree<NestedBoostingRTree, RegressionResult> {
 
+    @Serial
     private static final long serialVersionUID = 1864784340491461993L;
     private int minCount = 5;
     private int maxDepth = 3;
@@ -67,14 +70,10 @@ public class NestedBoostingRTree extends AbstractRegressionModel<NestedBoostingR
 
     @Override
     public Capabilities capabilities() {
-        return Capabilities.builder()
-                .allowMissingInputValues(false)
-                .allowMissingTargetValues(false)
-                .minInputCount(1).maxInputCount(Integer.MAX_VALUE)
-                .inputTypes(Arrays.asList(VarType.DOUBLE, VarType.INT, VarType.BINARY, VarType.LONG))
-                .minTargetCount(1).maxTargetCount(1)
-                .targetType(VarType.DOUBLE)
-                .build();
+        return new Capabilities(
+                1, Integer.MAX_VALUE,
+                Arrays.asList(VarType.DOUBLE, VarType.INT, VarType.BINARY, VarType.LONG), false,
+                1, 1, List.of(VarType.DOUBLE), false);
     }
 
     public int getMinCount() {
