@@ -35,7 +35,9 @@ import rapaio.printer.Format;
 import rapaio.printer.Printer;
 import rapaio.printer.opt.POption;
 
+import java.io.Serial;
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * Simple regression which predicts with the median value of the target columns.
@@ -50,6 +52,7 @@ import java.util.Arrays;
  */
 public class L1Regression extends AbstractRegressionModel<L1Regression, RegressionResult> {
 
+    @Serial
     private static final long serialVersionUID = 6125284399953219419L;
 
     public static L1Regression newL1() {
@@ -77,14 +80,10 @@ public class L1Regression extends AbstractRegressionModel<L1Regression, Regressi
 
     @Override
     public Capabilities capabilities() {
-        return Capabilities.builder()
-                .minInputCount(0).maxInputCount(1_000_000)
-                .minTargetCount(1).maxTargetCount(1_000_000)
-                .inputTypes(Arrays.asList(VarType.DOUBLE, VarType.BINARY, VarType.INT, VarType.NOMINAL, VarType.LONG, VarType.STRING))
-                .targetType(VarType.DOUBLE)
-                .allowMissingInputValues(true)
-                .allowMissingTargetValues(true)
-                .build();
+        return new Capabilities(
+                0, 1_000_000,
+                Arrays.asList(VarType.DOUBLE, VarType.BINARY, VarType.INT, VarType.NOMINAL, VarType.LONG, VarType.STRING), true,
+                1, 1_000_000, List.of(VarType.DOUBLE), true);
     }
 
     @Override
